77 plugins should be executed using pluginclassloader as tccl 1 (#33)
Added dedicated support for Neo4j plugins to embedded store